# VOUCH-Verifiable-Online-Unlearning-Certification-via-Hypothesis-betting

./: .gitignore  README.md  algorithm.md  pyproject.toml  requirements.txt
docs/: PAPER.md  THEORY.md
experiments/: make_example.py  make_figures.py  reanalyze.py  rescore.py  run_benchmark.py  run_lm_big.py  run_lm_e2e.py  run_simulation.py  run_utility_guardrail.py
manuscript/: VERIFY_CITATIONS.md  cis.tex  cover_letter.tex  main.tex  make_tables.py  refs.bib  response_letter.tex
results/: example_generations.json  lm_e2e_gemma4.json  lm_e2e_gemma4_partial.json  lm_e2e_gpt2_v1.json  lm_e2e_gpt2_v2.json  lm_e2e_gpt2_v2_seed0.json  lm_e2e_gpt2_v2_seeds12.json  lm_e2e_gpt2_v2_seeds12_reanalysis.json  lm_e2e_muse_gpt2.json  lm_e2e_muse_gpt2_512.json  lm_e2e_muse_gpt2_512_reanalysis.json  lm_e2e_muse_gpt2_512_rescored.json  lm_e2e_muse_gpt2_512b.json  lm_e2e_muse_gpt2_512b_partial.json  lm_e2e_muse_phi-1_5.json  lm_e2e_muse_phi-1_5_rescored.json  lm_e2e_muse_pythia160m.json  lm_e2e_muse_pythia160m_rescored.json  lm_e2e_phi4_mini.json  lm_e2e_phi4_mini_partial.json  lm_e2e_qwen3_06b.json  lm_e2e_qwen3_4b.json  lm_e2e_tiny.json  lm_e2e_tiny_reanalysis.json  lm_e2e_tiny_v1_npobug.json  lm_e2e_tofu_gpt2.json  lm_e2e_tofu_gpt2_b.json  lm_e2e_tofu_gpt2_rescored.json  lm_e2e_tofu_phi-1_5.json  lm_e2e_tofu_phi-1_5_rescored.json  lm_e2e_tofu_pythia160m.json  lm_e2e_tofu_pythia160m_b.json  lm_e2e_tofu_pythia160m_b_partial.json  lm_e2e_tofu_pythia160m_rescored.json  sim_ablation.json  sim_cohort_size.json  sim_log.txt  sim_power.json  sim_protocol_validity.json  sim_soundness.json  (+6 more)
(+27 files in other folders)
