[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vouch-unlearning"
version = "1.0.0"
description = "VOUCH: anytime-valid statistical certificates for machine unlearning via paired-canary betting e-processes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
torch = ["torch>=2.0"]
hf = ["torch>=2.0", "transformers>=4.40"]
figs = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["vouch*"]
